fix error avt on headerbar and develops search

--- a/Frontend/detailCar.html
+++ b/Frontend/detailCar.html
@@ -34,19 +34,12 @@
         /* Header */
         .header {
             position: fixed;
-            /* Đặt vị trí cố định */
             top: 0;
-            /* Căn trên cùng */
             left: 0;
-            /* Căn trái */
             width: 100%;
-            /* Chiếm toàn bộ chiều rộng */
             height: 85px;
-            /* Chiều cao của header */
             background: linear-gradient(to right, #1a1a1a, #202020, #393939);
-            /* Màu nền của header */
             z-index: 999;
-            /* Đảm bảo header nằm trên các phần tử khác */
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -310,6 +303,13 @@
         .footer .copyright a {
             color: #fff;
             text-decoration: none;
+        }
+
+        .avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 5px;
         }
 
     </style>
