fixbug front-end and request token

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <div class="sign-up">
-      <div class="div">
         <div class="overlap">
+          <!-- <a href="aboutus.html" class="aboutus"><i class="fa fa-question-circle"></i>
+            <p>About US</p>
+          </a> -->
           <img class="element" src="/image/back.png" />
           <div class="frame">
             <div class="hello-welcome-back">Hello !<br />Welcome Back</div>
@@ -49,7 +51,5 @@
           <img class="logoweb" src="/image/LogoWeb.png" />
         </a>
       </div>
-    </div>
-    
   </body>
 </html>
