--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -123,6 +123,22 @@
     window.location.href = `detailCar.html?id=${carId}`;    
     }, 500);
 }
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const token = localStorage.getItem("token");
+        const avatar = localStorage.getItem("avatar") || "/image/default-avatar.png"; // Set default avatar
+        const name = localStorage.getItem("name");
+        const email = localStorage.getItem("email");
+        const loginBtn = document.getElementById("login-btn");
+
+        if (token) {
+            loginBtn.innerHTML = `<img src="${avatar}" alt="Avatar" class="avatar"> <p>${name || email}</p>`;
+            loginBtn.href = "#";
+        } else {
+            loginBtn.innerHTML = `<i class="fa fa-user"></i> <span id="login-text">Login</span>`;
+            loginBtn.href = "login.html";
+        }
+    });
  </script>
 </body>
 </html>
