--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="sign-in">
-    <img src="/image/back.png" alt="Background" class="background" />
+    <!-- <img src="/image/back.png" alt="Background" class="background" /> -->
     <div class="header">
       <div class="logo">
         <a href="index.html">
