--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -15,7 +15,7 @@
           <!-- <a href="aboutus.html" class="aboutus"><i class="fa fa-question-circle"></i>
             <p>About US</p>
           </a> -->
-          <img class="element" src="/image/back.png" />
+          <!-- <img class="element" src="/image/back.png" /> -->
           <div class="frame">
             <div class="hello-welcome-back">Hello !<br />Welcome Back</div>
             <form id="signupForm"> 
