update chatbot icon

--- a/Frontend/chatbot.html
+++ b/Frontend/chatbot.html
@@ -6,6 +6,7 @@
     <title>AI Chatbot</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="/stylecss/chatbot.css">
+    <link rel="icon" href="/image/LogoWeb.png">
 </head>
 <body>
     <div class="logo-home">
