--- a/Frontend/customersManager.html
+++ b/Frontend/customersManager.html
@@ -9,7 +9,7 @@
             <option value="Hoạt động">Hoạt động</option>
             <option value="Ngừng hoạt động">Ngừng hoạt động</option>
         </select>
-        <button class="btn btn-primary ms-auto">Thêm khách hàng</button>
+        <button class="btn btn-primary ms-auto" onclick="addCustomer()">Thêm khách hàng</button>
     </div>
 
     <table class="table table-bordered table-striped mt-4">
@@ -23,18 +23,8 @@
                 <th>Hành động</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Nguyễn Văn A</td>
-                <td>vana@example.com</td>
-                <td>0123456789</td>
-                <td>Hoạt động</td>
-                <td>
-                    <button class="btn btn-warning">Sửa</button>
-                    <button class="btn btn-danger">Xóa</button>
-                </td>
-            </tr>
+        <tbody id="customer-table">
+            <!-- Dữ liệu khách hàng sẽ được thêm vào đây -->
         </tbody>
     </table>
 </div>
