--- a/Frontend/manager.html
+++ b/Frontend/manager.html
@@ -6,6 +6,7 @@
     <script src="/javascript/manager.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/javascript/dashboard.js"></script>
+    <script src="/javascript/customerMana.js"></script>
     <title>Management</title>
     <link rel="stylesheet" href="/stylecss/manager.css">
     <link rel="icon" href="/image/LogoWeb.png">
