--- a/Frontend/manager.html
+++ b/Frontend/manager.html
@@ -29,9 +29,8 @@
             <div class="list-menu">
                 <h1 class="menu-title" >MENU</h1>
                 <button class="btn-menu" onclick="loadPage('dashboard.html')">Dashboard</button>
-                <button class="btn-menu" onclick="loadPage('customersManager.html')">Customers Manager</button>
+                <button class="btn-menu" onclick="loadPage('customersManager.html'); waitForInitHtml()">Customers Manager</button>
                 <button class="btn-menu" onclick="loadPage('carsManager.html')">Cars Manager</button>
-                <button class="btn-menu" onclick="loadPage('review.html')">Review & Comments</button>
                 <button class="btn-menu" onclick="window.location.href='index.html'">Return Home</button>
             </div>
         </div>
